--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -99,3 +99,12 @@ discovery.seed_hosts: ["10.128.0.6:9200","10.128.0.9:9200","10.128.0.8:9200","10
 # Require explicit names when deleting indices:
 #
 #action.destructive_requires_name: true
+#xpack.security.enabled: true
+#######
+#xpack.security.transport.ssl.enabled: true
+#xpack.security.transport.ssl.verification_mode: certificate
+#xpack.security.transport.ssl.keystore.path: /usr/share/elasticsearch/config/elastic-certificates.p12
+#xpack.security.transport.ssl.truststore.path: /usr/share/elasticsearch/config/elastic-certificates.p12
+#xpack.security.http.ssl.enabled: true
+#xpack.security.http.ssl.keystore.path: "/etc/elasticsearch/http.p12"
+
